--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.0.4",
     "@sanity/client": "^7.14.1",
     "@sanity/image-url": "^2.0.3",
     "astro": "^5.16.15"
